# HU-Vision-1819-Base

./: .gitignore  CMakeLists.txt
implementatieplannen/template/: implementatieplan_template.tex
implementatieplannen/working/: week1.tex  week2.tex
meetrapporten/template/: meetrapport_template.tex
meetrapporten/working/: week1_benchmark.tex  week1_unit_testing.tex
source/: .clang-format  CMakeLists.txt
source/ExternalDLL/ExternalDLL/: DefaultExtraction.cpp  DefaultLocalization.cpp  FeatureMap.cpp  FeatureMap.h  GrayscaleAlgorithm.cpp  HereBeDragons.cpp  ImageFactory.cpp  ImageFactory.h  ImageIO.cpp  IntensityImagePrivate.cpp  IntensityImageStudent.cpp  IntensityImageStudent.h  Main.cpp  PixelType.h  Point2D.h  RGBImagePrivate.cpp  RGBImageStudent.cpp  RGBImageStudent.h  SonnetXVIII.cpp  StudentLocalization.cpp
source/benchmark/: CMakeLists.txt  benchmark_main.cpp
source/benchmark/week1/: Image.hpp
source/test/: CMakeLists.txt  testing_main.cpp
source/test/week1/: Image.hpp
source/week1/: CMakeLists.txt  DynamicImage.hpp  Image.hpp
source/week1/colour/: Intensity.hpp  RGB.hpp
source/week1/policy/: Null.hpp  ThrowPolicy.hpp
